--- a/JPA_PRACTICE/src/test/resources/application.yml
+++ b/JPA_PRACTICE/src/test/resources/application.yml
@@ -1,17 +1,17 @@
 spring:
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/jpashop
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-#        #show_sql: true #이것은 sout으로 프린트
-#        format_sql : true
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/jpashop
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      #ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true #이것은 sout으로 프린트
+        format_sql : true
 
 logging:
   level:
