feat: 회원 관련 비즈니스 설계

--- a/JPA_PRACTICE/src/test/resources/application.yml
+++ b/JPA_PRACTICE/src/test/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      #ddl-auto: create
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true #이것은 sout으로 프린트
